# cifraclub-list-to-pdf-all-langs

./: .gitignore  README.md  benchmark.py  test_structure.py
go/: README.md  benchmark.go  go.mod  go.sum  scraper.go  songs.html
languages/csharp/: README.md  benchmarks.json  cifraclub-list-to-pdf-csharp.sln  run_benchmark.sh
languages/elixirlang/: .gitignore  Dockerfile  README.md  benchmark.exs  benchmarks.json  mix.exs  run_benchmark.sh
languages/go/: .gitignore  Dockerfile  README.md  benchmark.go  benchmarks.json  go.mod  go.sum  pdf.go  run_benchmark.sh  scraper.go  utils.go
languages/java/: .gitignore  Dockerfile  README.md  benchmarks.json  dependency-reduced-pom.xml  pom.xml  run_benchmark.sh
languages/python/: README.md  benchmark.py  benchmarks.json  pdf.py  requirements.txt  run_benchmark.sh  scraper.py  utils.py
languages/python-playwright/: .gitignore  Dockerfile  README.md  benchmarks.json  pdf.py  requirements.txt  run_benchmark.sh  scraper.py  test_app.py
languages/ruby/: .gitignore  Dockerfile  Gemfile  README.md  benchmark.rb  benchmarks.json  pdf.rb  run_benchmark.sh  scraper.rb  utils.rb
languages/rust/: .gitignore  Cargo.toml  Dockerfile  README.md  benchmarks.json  run_benchmark.sh
languages/rust/src/: main.rs  pdf.rs  scraper.rs  utils.rs
languages/typescript-bun-puppeteer/: Dockerfile  README.md  benchmark.ts  benchmarks.json  bun.lockb  (+3 more)
python/: main.py  requirements.txt  scraper.py  test_main.py
typescript/: .gitignore  README.md  benchmark.ts  bun.lockb  index.ts  package.json  run_benchmark.sh  test.html  types.ts
(+40 files in other folders)
