[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.14"
scraper = "0.23.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
failure = "0.1.8"
fantoccini = "0.21.4"
warp = "0.3.7"
headless_chrome = "1.0.17"
anyhow = "1.0.97"
