[package]
name = "cifraclub_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.14"
scraper = "0.23.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
warp = "0.3.7"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
